fixed wrong font

--- a/static/sass/blog.scss
+++ b/static/sass/blog.scss
@@ -7,7 +7,7 @@ $font-post: 1.2em "Merriweather", serif;
 $font-tag: 1em "Fira Sans", sans-serif;
 $font-quote: italic 1.1em "Merriweather", serif;
 $font-superscript: 0.8em;
-$font-code: 0.9em "Fira Sans", monospace;
+$font-code: 0.9em "Fira Code", monospace;
 
 $border-bottom: 1px solid #888;
 $border: 1px solid rgba(0, 0, 0, 0.15);
